src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>10K Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Additional_Case_Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Case Contact 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Case_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Case Contact 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Additional Case Contact 2)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Case_Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Case Contact 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Additional Case Contact 3)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(
  ISBLANK(ClosedDate),
  NOW() - CreatedDate,
  ClosedDate - CreatedDate
)</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Response_Date_Time__c</fullName>
        <label>First Response Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Checked_For_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Checked For Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Case_Flag__c</fullName>
        <formula>OR(
  AND(
    NOT(ISBLANK(ContactId)),
    Contact.Portal_User__r.Id = $User.Id
  ),
  AND(
    OwnerId = $User.Id
  )
)</formula>
        <label>My Case Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Case_Contact_of_New_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Case Contact of New Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Case_Owner_of_New_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Case Owner of New Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_DoubleClick_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify DoubleClick Support</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>DFP_Cases_All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.DoubleClick_for_Salesforce</value>
        </filters>
        <label>DFP Cases - All</label>
        <sharedTo>
            <group>DoubleClick_Support_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DFP_Cases_Closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.DoubleClick_for_Salesforce</value>
        </filters>
        <label>DFP Cases - Closed</label>
        <sharedTo>
            <group>DoubleClick_Support_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DFP_Cases_Open</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.DoubleClick_for_Salesforce</value>
        </filters>
        <label>DFP Cases - Open</label>
        <sharedTo>
            <group>DoubleClick_Support_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Case_Flag__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>My_Case_Flag__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>DoubleClick_for_Salesforce</fullName>
        <active>true</active>
        <businessProcess>10K Support Process</businessProcess>
        <label>DoubleClick for Salesforce</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Community_Support</fullName>
        <active>true</active>
        <businessProcess>10K Support Process</businessProcess>
        <label>General Community Support</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>